fixes for AMD64

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@
 ## This file is part of libtrace
 ##
 ## Copyright (c) 2004 The University of Waikato, Hamilton, New Zealand.
-## Authors: Daniel Lawson 
-##          Perry Lorier 
+## Authors: Daniel Lawson, WAND Group
+##          Perry Lorier, WAND Group
 ##          
 ## All rights reserved.
 ##
