--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,9 @@
 ##
 ##
 
+- Version 2.0.2
+	* Port to AMD64. Should also work on IA64
+
 - Version 2.0.1
 	* Port to FreeBSD. Thanks to Phil Murray for testing this
 
