--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,9 @@
 ##
 ##
 
+- Version 2.0.3 (unreleased)
+	* Fixed packet->size bug for pcap
+
 - Version 2.0.2
 	* Port to AMD64. Should also work on IA64
 	* Will compile cleanly under gcc-2.95 (Debian Woody)
