--- a/ChangeLog
+++ b/ChangeLog
@@ -28,7 +28,14 @@
 ##
 ##
 
-- Version 2.0.3 (unreleased)
+- Version 2.0.8 (unreleased)
+	* Added better configure time checking for pcap-bpf.h (ie, actually fail early if it can't find it or an equivalent)
+
+
+- Version 2.0.7
+	* Assorted bugfixes.
+
+- Version 2.0.3 
 	* Fixed packet->size bug for pcap
 
 - Version 2.0.2
