--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,11 @@
 ##
 ##
 
+- Version 2.0.14
+	* Fixed a bug where ERF traces weren't being checked for rxerrors.
+	  If the ERF record indicates an rxerror, then get_link() returns 
+	  NULL.
+
 - Version 2.0.13
 	* Improved source docs / doxygen
 	* Added functions to retrieve TCP, UDP and ICMP headers encapsulated
