Ported to OpenBSD
Changes were mostly with header changes, although openbsd's pcap doesn't have pcap_open_dead, so we provide our own. To this end, I fixed the libreplace shit that wasn't working at all well, and ended  up putting strndup.c and pcap_open_dead.c into lib/, and adding @LTLIBOBJS@ to the libtrace source file line. Seems to work fine now!

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@
 ##
 
 - Version 2.0.16
+        * Ported to OpenBSD
         * Fixed a bug in the event api where it would die instantly
 	  for offline traces.
 
