--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,10 @@
 - Version 2.0.18
 	* When opening a trace file, call open() with O_LARGEFILE set and 
 	  pass the fd into gzdopen/fdopen.
+	* Distributions should include man pages and other doxygen generated
+	  output
+	* make install will install man pages into $PREFIX/man/man3
+	* fixed some compilation bugs in most of the examples 
 
 - Version 2.0.17
 	* Fixed a bug in trace_get_erf_timestamp for the pcap path. 
