--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@
 	* Add support for primitive trace writing
 	  See trace_output_create(), trace_output_destroy(), and
 	  trace_write_packet()
+	* Added trace_perror() and libtrace errno functionality.
 
 - Version 2.0.18
 	* When opening a trace file, call open() with O_LARGEFILE set and 
