--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,7 @@
 
 - Version 2.0.20
 	* byte-ordering fixups for WAG
+	* writer functions for pcap and wag
 
 - Version 2.0.19 
 	* Move code for different input formats (erf, pcap, wag) into
