--- a/tools/tracesplit/tracesplit.1
+++ b/tools/tracesplit/tracesplit.1
@@ -3,7 +3,7 @@
 tracesplit \- split traces
 .SH SYNOPSIS
 .B tracemerge 
-outputuri inputuri ...
+inputuri outputuri ...
 .SH DESCRPTION
 tracesplit splits one trace into multiple tracefiles
 .TP
