Add trace convert

--- a/tools/tracesplit/tracefilter.1
+++ b/tools/tracesplit/tracefilter.1
@@ -1,4 +1,4 @@
-.TH TRACESPLIT "1" "October 2005" "tracefilter (libtrace)" "User Commands"
+.TH TRACECONVERT "1" "October 2005" "tracefilter (libtrace)" "User Commands"
 .SH NAME
 tracefilter \- apply a bpf filter to a trace
 .SH SYNOPSIS
@@ -10,6 +10,6 @@ tracefilter copies all packets that match a bpf expression to an output file.
 tracefilter is a shellscript wrapper around tracesplit(1)
 
 .SH SEE ALSO
-libtrace(1), tracemerge(1), tracesplit(1)
+libtrace(3), tracemerge(1), tracesplit(1)
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
