--- a/tools/tracesplit/tracesplit.1
+++ b/tools/tracesplit/tracesplit.1
@@ -38,6 +38,6 @@ erf:/traces/port80.gz
 .fi
 
 .SH SEE ALSO
-libtrace(3), tracemerge(3)
+libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1)
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
