--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,9 @@
 ##
 ##
 
+- Version 2.0.23
+	* configure fixes for dag
+
 - Version 2.0.22
 	* Documentation updates
 	* Added pcap_dump_flush() replacement function
