--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,7 @@
 
 - Version 2.0.23
 	* configure fixes for dag
+	* set attributes on functions to improve compiler caching
 
 - Version 2.0.22
 	* Documentation updates
