--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,9 @@
 	* added get_framing_length format function, to return the length
 	  of any framing headers added by the capture process (eg, pcap or 
 	  ERF headers)
+	* added libpacketdump, a library for dumping out packet information
+	* updated tracedump to use libpacketdump, and copied it to the tools/
+	  directory
 
 - Version 2.0.22
 	* Documentation updates
