--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,8 @@
 ##
 ##
 
+- Version 2.0.24 (unreleased)
+
 - Version 2.0.23
 	* configure fixes for dag
 	* set attributes on functions to improve compiler caching
