Update the man pages

--- a/tools/tracedump/tracedump.1
+++ b/tools/tracedump/tracedump.1
@@ -11,7 +11,8 @@ inputuri ...
 tracedump verbosely outputs packets in a human readable form, suitable for
 diagnosing packets.
 
-tracedump uses the libpacketdump library.
+tracedump uses the libpacketdump library.  There is an examlpe tracedump 
+program in the examples directory that shows how to use libpacketdump.
 
 .TP
 .PD 0
