Updated ChangeLog to describe fix for dealing with rxerror erf_output

--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@
 - Version 2.0.25 (unreleased)
 	* updated rtclient_read_packet to be compatible with new rt protocol
 	* rtclient input now correctly ignores packets with type = RT_MSG
+	* erf_write_packet now deals with rxerrors appropriately
 
 - Version 2.0.24 
 	* minor bugs in format_erf
