Cleanup the tools

--- a/tools/traceanon/traceanon.1
+++ b/tools/traceanon/traceanon.1
@@ -7,6 +7,8 @@ traceanon \- anonymise ip addresses of traces
 [ \-d | \-\^\-encrypt-dest ]
 [ \-p prefix | \-\^\-prefix=prefix ]
 [ \-c key | \-\^\-cryptopan=key ]
+sourceuri
+desturi
 .SH DESCRPTION
 traceanon anonymises a trace by replacing IP addresses found in the IP header,
 and any embedded packets inside an ICMP packet.  It also fixes the checksums
