--- a/INSTALL
+++ b/INSTALL
@@ -1,51 +1,25 @@
+Requirements:
+ * >=automake-1.9
+ * >=libpcap-0.8
+ 
 Installing libtrace:
 
-
-----------------------------------
-To make and install libtrace:
-
-libtrace requires the development libraries for libpcap and libz to compile
-eg, on Debian Woody these are called libpcap-dev and zlib1g-dev.
-
-
-tar zxvf libtrace-x.y.z.tar.gz
-cd libtrace-x.y.z
 ./configure
 make
-(as root)
-make install
-
 
 
 You may need to add the line '/usr/local/lib' to your /etc/ld.so.conf and
 run 'ldconfig' as root.
 
 ----------------------------------
-To build the docs:
-
-cd libtrace-x.y.z
-doxygen
-
-
-This will build the docs into libtrace-x.y.z/docs/{html,man}
-There is currently no install candidate for these - sorry about that.
-
-
-----------------------------------
 Using libtrace:
 
 There are a number of example programs which should cover the basics of what you need within libtrace-x.y.z/examples/.
 
-
-
 ----------------------------------
 Large trace files:
 
-Note that if you wish to use libtrace to read in large ( > 2/4 GB) files, and
-you wish to use gz-compressed traces or pcap traces, you will need to link
-against a version of libz or libpcap that supports large files.
-
-The versions of libz and libpcap that ship with Debian Woody don't support
+The versions of libpcap that ship with Debian Woody don't support
 large file offsets.
 
 
@@ -54,53 +28,8 @@ To get around this, you have a number of options:
 * Don't use compressed files.
 * Use stdin as the target of the input uri, and use cat or zcat to pipe the 
   file into stdin, eg:
-  zcat largetrace.erf.gz | program -i erf:-
+  zcat largetrace.pcap.gz | program -i pcap:-
 * Use process substitution in place of a filename, eg:
-  program -i erf:<(zcat largetrace.erf.gz)
-
-
-----------------------------------
-Currently support input URIs:
-
-ERF (dag card tracefile):
-erf:/path/to/file
-erf:/path/to/file.gz
-erf:/path/to/socket
-erf:-
-
-Legacy DAG formats:
-legacyatm:/path/to/file
-legacyatm:/path/to/file.gz
-legacyatm:-
-legacypos:/path/to/file
-legacypos:/path/to/file.gz
-legacypos:-
-legacyeth:/path/to/file
-legacyeth:/path/to/file.gz
-legacyeth:-
-
-PCAP (from libpcap)
-pcap:/path/to/file
-pcap:-
-
-PCAP Interface (from libpcap)
-pcapint:eth0
-pcapint:ppp0
-
-WAG tracefile
-wag:/path/to/file
-wag:/path/to/file.gz
-wag:/path/to/socket
-wag:-
-
-WAG card
-wagint:/dev/wag0
-
-Real Time Client interface at Waikato University
-rtclient:hostname
-rtclient:hostname:port
-
-DAG (native dag)
-dag:/dev/dag0
+  program -i pcap:<(zcat largetrace.pcap.gz)
 
 
