Add man pages (And install them!) for all the various tools

--- a/tools/tracesplit/traceconvert.1
+++ b/tools/tracesplit/traceconvert.1
@@ -16,6 +16,7 @@ traceconvert erf:/traces/bigtrace.gz pcap:\- | tcpdump \-r - \-n
 .fi
 
 .SH SEE ALSO
-libtrace(3), tracemerge(1), tracesplit(1), tracefilter(1)
+libtrace(3), tracemerge(1), tracesplit(1), tracefilter(1), tracesummary(1),
+tracereport(1), tracesplit_dir(1)
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
