--- a/tools/tracesplit/tracesplit.1
+++ b/tools/tracesplit/tracesplit.1
@@ -2,9 +2,9 @@
 .SH NAME
 tracesplit \- split traces
 .SH SYNOPSIS
-.B tracemerge 
+.B tracesplit
 inputuri outputuri ...
-.SH DESCRPTION
+.SH DESCRIPTION
 tracesplit splits one trace into multiple tracefiles
 .TP
 \fB\-f\fR bpf filter
@@ -40,6 +40,6 @@ erf:/traces/port80.gz
 .fi
 
 .SH SEE ALSO
-libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1)
+libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracesplit_dir(1)
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
