Update all the man pages to make sure they refer to each other (and fix any other typo's found along the way).  This makes it easier to discover new libtrace tools

--- a/tools/traceanon/traceanon.1
+++ b/tools/traceanon/traceanon.1
@@ -69,7 +69,8 @@ IP addresses inside ARP's are not encrypted.
 
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracestats(1),
-tracesummary(1)
+tracesummary(1), tracertstats(1), tracesplit(1), tracesplit_dir(1), 
+tracereport(1), tracedump(1)
 
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
