--- a/tools/tracemerge/tracemerge.1
+++ b/tools/tracemerge/tracemerge.1
@@ -27,6 +27,9 @@ other trace files) to be 0 for the first file, 1 for the second file etc.
 Ignore duplicate packets with identical timestamps.
 
 .SH SEE ALSO
-libtrace(3), tracemerge(1), tracesplit(1), tracefilter(1)
+libtrace(3), tracesplit(1), tracesplit_dir(1), tracefilter(1),
+traceconvert(1), tracereport(1), tracertstats(1), tracestats(1), tracedump(1),
+traceanon(1), tracesummary(1)
+
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
