--- a/tools/tracesplit/tracefilter.1
+++ b/tools/tracesplit/tracefilter.1
@@ -10,6 +10,9 @@ tracefilter copies all packets that match a bpf expression to an output file.
 tracefilter is a shellscript wrapper around tracesplit(1)
 
 .SH SEE ALSO
-libtrace(3), tracemerge(1), tracesplit(1)
+libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), traceconvert(1),
+tracereport(1), tracestats(1), tracertstats(1), tracedump(1), traceanon(1), 
+tracesummary(1)
+
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
