--- a/tools/tracedump/tracedump.1
+++ b/tools/tracedump/tracedump.1
@@ -33,8 +33,9 @@ stop after displaying \fInum\fR packets.
 
 
 .SH SEE ALSO
-libtrace(3), tracemerge(1), tracesplit(1), tracefilter(1), tracestats(1),
-tracesummary(1)
+libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), tracefilter(1),
+tracestats(1), tracesummary(1), traceconvert(1), tracereport(1) tracertstats(1),
+traceanon(1)
 
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>, Daniel Lawson <dlawson@cs.waikato.ac.nz>
