--- a/tools/tracereport/tracereport.1
+++ b/tools/tracereport/tracereport.1
@@ -24,6 +24,9 @@ TTL breakdown
 Direction
 
 .SH SEE ALSO
-libtrace(3), tracemerge(1), tracesplit(1), tracefilter(1)
+libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), tracefilter(1),
+traceconvert(1), tracestats(1), tracertstats(1), tracereport(1), tracedump(1),
+traceanon(1), tracesummary(1)
+
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
