--- a/tools/tracertstats/tracertstats.1
+++ b/tools/tracertstats/tracertstats.1
@@ -83,6 +83,8 @@ tracertstats \-\^\-filter 'host sundown' \\
 .fi
 
 .SH SEE ALSO
-libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1)
+libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), tracefilter(1), 
+traceconvert(1), tracereport(1), tracedump(1), traceanon(1), tracesummary(1)
+
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
