--- a/tools/tracesplit/traceconvert.1
+++ b/tools/tracesplit/traceconvert.1
@@ -17,6 +17,8 @@ traceconvert erf:/traces/bigtrace.gz pcap:\- | tcpdump \-r - \-n
 
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracesplit(1), tracefilter(1), tracesummary(1),
-tracereport(1), tracesplit_dir(1)
+tracereport(1), tracesplit_dir(1), tracestats(1), tracertstats(1), tracedump(1),
+traceanon(1), tracesummary(1)
+
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
