--- a/tools/tracesplit/tracesplit.1
+++ b/tools/tracesplit/tracesplit.1
@@ -40,6 +40,9 @@ erf:/traces/port80.gz
 .fi
 
 .SH SEE ALSO
-libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracesplit_dir(1)
+libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracesplit_dir(1),
+tracereport(1), tracertstats(1), tracestats(1), tracedump(1), traceanon(1),
+tracesummary(1)
+
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
