--- a/tools/tracestats/tracesummary.1
+++ b/tools/tracestats/tracesummary.1
@@ -10,6 +10,8 @@ tracesummary provides basic summary stats about a trace.
 traceconvert is a shellscript wrapper around tracestats(1)
 
 .SH SEE ALSO
-libtrace(3), tracemerge(1), tracesplit(1), tracefilter(1), tracestats(1)
+libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), tracefilter(1),
+tracestats(1), tracereport(1), tracertstats(1), tracedump(1), traceanon(1),
+
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
