Update the copyright information Fix libpcap issue Remove all swig/python builds

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 $Header$
 
-libtrace 3.0.0 (Beta 7)
+libtrace 3.0.0 beta 8
 
 ---------------------------------------------------------------------------
-Copyright (c) 2004 The University of Waikato, Hamilton, New Zealand.
+Copyright (c) 2007 The University of Waikato, Hamilton, New Zealand.
 All rights reserved.
 
 This code has been developed by the University of Waikato WAND
