--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 $Header$
 
-libtrace 3.0.0 beta 8
+libtrace 3.0.0
 
 ---------------------------------------------------------------------------
 Copyright (c) 2007 The University of Waikato, Hamilton, New Zealand.
