Bringing a lot of the manpages up to date as well as adding a link to the wiki

--- a/tools/tracedump/tracedump.1
+++ b/tools/tracedump/tracedump.1
@@ -31,6 +31,9 @@ tcpdump(1) for the syntax of the bpf-filter expression.
 .BI \-\^\-count " num"
 stop after displaying \fInum\fR packets.
 
+.SH LINKS
+More details about tracedump (and libtrace) can be found at
+http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
 
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), tracefilter(1),
