--- a/tools/tracemerge/tracemerge.1
+++ b/tools/tracemerge/tracemerge.1
@@ -26,6 +26,10 @@ other trace files) to be 0 for the first file, 1 for the second file etc.
 .BI \-\^\-unique-packets
 Ignore duplicate packets with identical timestamps.
 
+.SH LINKS
+More details about tracemerge (and libtrace) can be found at
+http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
+
 .SH SEE ALSO
 libtrace(3), tracesplit(1), tracesplit_dir(1), tracefilter(1),
 traceconvert(1), tracereport(1), tracertstats(1), tracestats(1), tracedump(1),
