--- a/tools/tracesplit/traceconvert.1
+++ b/tools/tracesplit/traceconvert.1
@@ -15,6 +15,10 @@ traceconvert is a shellscript wrapper around tracesplit(1)
 traceconvert erf:/traces/bigtrace.gz pcap:\- | tcpdump \-r - \-n
 .fi
 
+.SH LINKS
+More details about traceconvert (and libtrace) can be found at
+http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
+
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracesplit(1), tracefilter(1), tracesummary(1),
 tracereport(1), tracesplit_dir(1), tracestats(1), tracertstats(1), tracedump(1),
