--- a/tools/tracesplit/tracefilter.1
+++ b/tools/tracesplit/tracefilter.1
@@ -9,6 +9,10 @@ tracefilter copies all packets that match a bpf expression to an output file.
 
 tracefilter is a shellscript wrapper around tracesplit(1)
 
+.SH LINKS
+More details about tracefilter (and libtrace) can be found at
+http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
+
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), traceconvert(1),
 tracereport(1), tracestats(1), tracertstats(1), tracedump(1), traceanon(1), 
