--- a/tools/traceanon/traceanon.1
+++ b/tools/traceanon/traceanon.1
@@ -67,6 +67,10 @@ This software should support encrypting based on the direction/interface flag.
 
 IP addresses inside ARP's are not encrypted.
 
+.SH LINKS
+More details about traceanon (and libtrace) can be found at
+http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
+
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracestats(1),
 tracesummary(1), tracertstats(1), tracesplit(1), tracesplit_dir(1), 
