--- a/tools/tracertstats/tracertstats.1
+++ b/tools/tracertstats/tracertstats.1
@@ -82,6 +82,10 @@ tracertstats \-\^\-filter 'host sundown' \\
 	erf:/traces/trace2.gz 
 .fi
 
+.SH LINKS
+More details about tracertstats (and libtrace) can be found at
+http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
+
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), tracefilter(1), 
 traceconvert(1), tracereport(1), tracedump(1), traceanon(1), tracesummary(1)
