--- a/tools/tracesplit/tracesplit_dir.1
+++ b/tools/tracesplit/tracesplit_dir.1
@@ -12,6 +12,10 @@ tracesplit splits one trace into two tracefiles, one for each direction.
 tracesplit erf:/traces/bigtrace.gz erf:in.gz erf:out.gz
 .fi
 
+.SH LINKS
+More details about tracesplit_dir (and libtrace) can be found at
+http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
+
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracesplit(1),
 tracereport(1), tracertstats(1), tracestats(1), tracedump(1), traceanon(1),
