--- a/tools/tracestats/tracestats.1
+++ b/tools/tracestats/tracestats.1
@@ -31,6 +31,10 @@ tracestats \-\^\-filter 'host sundown' \\
 	erf:/traces/trace2.gz \\
 .fi
 
+.SH LINKS
+More details about tracestats (and libtrace) can be found at
+http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
+
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracesplit(1), 
 tracesplit_dir(1), tracereport(1), tracertstats(1), tracedump(1), traceanon(1),
